@@ -1,4 +1,4 @@
-HTDig 3.0.8 README
+HTDig 3.0.8b1 README
 Copyright (C) 1995, 1996, 1997 Andrew Scherpbier <andrew@contigo.com>
 
 HTDig is a world-wide-web search system for an intranet or small internet.
