@@ -1,5 +1,5 @@
 # Generated automatically from Makefile.in by configure.
-include /home/turtle/src/htdig/Makefile.config
+include /home/turtle/src/www/htdig/Makefile.config
 include .sniffdir/ofiles.incl
 
 OBJS=		$(OFILES)
@@ -23,42 +23,4 @@ distclean:	clean
 depend:
 	$(MAKEDEPEND)  $(CXXFLAGS) -- $(OBJS)
 
-main.o:	/home/turtle/src/htdig/CONFIG
-#DO NOT EDIT BELOW
-Images.o: Images.cc Images.h ../htlib/Dictionary.h ../htlib/Object.h \
- ../htlib/lib.h /opt/lib/g++-include/string.h \
- /opt/lib/g++-include/cstring /opt/lib/g++-include/std/cstring.h \
- /opt/lib/gcc-lib/sparc-sun-solaris2.5/2.7.2/include/string.h \
- /usr/include/sys/feature_tests.h ../include/htconfig.h \
- /usr/include/sys/time.h \
- /opt/lib/gcc-lib/sparc-sun-solaris2.5/2.7.2/include/sys/types.h \
- /opt/lib/gcc-lib/sparc-sun-solaris2.5/2.7.2/include/sys/isa_defs.h \
- /usr/include/sys/machtypes.h /usr/include/sys/select.h \
- /opt/lib/gcc-lib/sparc-sun-solaris2.5/2.7.2/include/time.h \
- /usr/include/sys/siginfo.h /usr/include/sys/machsig.h ../htlib/List.h \
- htdig.h ../htlib/Configuration.h ../htcommon/DocumentDB.h \
- ../htcommon/DocumentRef.h ../htlib/String.h \
- /opt/lib/gcc-lib/sparc-sun-solaris2.5/2.7.2/include/stdarg.h \
- /opt/lib/gcc-lib/sparc-sun-solaris2.5/2.7.2/include/va-sparc.h \
- ../htlib/Database.h ../htlib/StringMatch.h \
- /opt/lib/gcc-lib/sparc-sun-solaris2.5/2.7.2/include/stdlib.h \
- /opt/lib/gcc-lib/sparc-sun-solaris2.5/2.7.2/include/unistd.h \
- /usr/include/sys/unistd.h /opt/lib/g++-include/fstream.h \
- /opt/lib/g++-include/iostream.h /opt/lib/g++-include/streambuf.h \
- /opt/lib/g++-include/libio.h /opt/lib/g++-include/_G_config.h \
- /opt/lib/gcc-lib/sparc-sun-solaris2.5/2.7.2/include/stdio.h \
- ../htlib/URL.h ../htlib/Connection.h ../htlib/io.h \
- /usr/include/sys/socket.h /usr/include/sys/netconfig.h \
- /usr/include/netinet/in.h /usr/include/sys/stream.h \
- /usr/include/sys/vnode.h /usr/include/sys/t_lock.h \
- /usr/include/sys/machlock.h /usr/include/sys/dki_lkinfo.h \
- /usr/include/sys/dl.h /usr/include/sys/sleepq.h \
- /usr/include/sys/turnstile.h \
- /opt/lib/gcc-lib/sparc-sun-solaris2.5/2.7.2/include/sys/param.h \
- /usr/include/sys/pirec.h /usr/include/sys/mutex.h \
- /usr/include/sys/rwlock.h /usr/include/sys/semaphore.h \
- /usr/include/sys/condvar.h /usr/include/sys/cred.h \
- /usr/include/sys/uio.h /usr/include/vm/seg_enum.h \
- /usr/include/sys/poll.h /usr/include/sys/strmdep.h \
- /opt/lib/gcc-lib/sparc-sun-solaris2.5/2.7.2/include/sys/byteorder.h \
- /usr/include/netdb.h
+main.o:	/home/turtle/src/www/htdig/CONFIG
