@@ -16,6 +16,17 @@
 	also a <a href="ChangeLog">ChangeLog</a> file which has more
 	details on the code changes.
       </p>
+      <strong>Release notes for htdig-3.0.8b1</strong> 14-Apr-1997<br>
+      I consider this a beta release since I have not had time to test
+      everything.  Use at your own risk...
+      <ul>
+	<li>Base tag problem fixed
+	<li>URL parser somewhat more robust
+	<li>Date parsing bug fixed
+	<li>Added Substring fuzzy algorithm.
+	<li>Various other bugs were fixed.  Thanks for all the patches
+	    that were sent to me!
+      </ul>
       <strong>Release notes for htdig-3.0.7</strong> 12-Jan-1997<br>
       More bug fixes and some minor new functionality.  Hopefully,
       I'll be able to finish up work on version 3.1 at some point in
