@@ -30,6 +30,7 @@
 	<li><a href="http://www.redhat.com/">Red Hat Linux</a>
 	<li><a href="http://pobox.com/~pez/">World Famous PEZ Home Page</a>
 	<li><a href="http://www.ukc.ac.uk/">University of Kent at Canterbury</a>
+	<li><a href="http://fanying.eecs.stevens-tech.edu/cindy.html">Cindy Searcher at Stevens Tech</a>
       </ul>
 
       <hr noshade size=4>
