@@ -15,7 +15,7 @@
 
       <p>
 	The current release is <a
-	  href="http://htdig.sdsu.edu/files/htdig-3.0.6.tar.gz">htdig-3.0.6.tar.gz</a>.
+	  href="http://htdig.sdsu.edu/files/htdig-3.0.8b1.tar.gz">htdig-3.0.8b1.tar.gz</a>.
 	Note that this is gzipped tar file.  You will need the GNU
 	gunzip program to extract the files in the archive.  You can
 	get the latest version of any of the GNU tools from <a
