@@ -1,9 +1,12 @@
 //
 // parser.h
 //
-// $Id: parser.h,v 1.2 1997/03/24 04:33:25 turtle Exp $
+// $Id: parser.h,v 1.3 1997/04/27 14:43:31 turtle Exp $
 //
 // $Log: parser.h,v $
+// Revision 1.3  1997/04/27 14:43:31  turtle
+// changes
+//
 // Revision 1.2  1997/03/24 04:33:25  turtle
 // Renamed the String.h file to htString.h to help compiling under win32
 //
@@ -26,33 +29,33 @@
 class Parser
 {
 public:
-	                Parser();
+    Parser();
 	
-	int				checkSyntax(List *);
-	void			parse(List *, ResultList &);
+    int			checkSyntax(List *);
+    void		parse(List *, ResultList &);
 
-	void			setDatabase(Database *db)	{dbf = db;}
-	char			*getErrorMessage()			{return error.get();}
-	int				hadError()					{return valid == 0;}
+    void		setDatabase(Database *db)	{dbf = db;}
+    char		*getErrorMessage()		{return error.get();}
+    int			hadError()			{return valid == 0;}
 	
 protected:
-	int				lexan();
-	void			expr(int);
-	void			term(int);
-	void			factor(int);
-	int				match(int);
-	void			perform_push();
-	void			perform_and();
-	void			perform_or();
+    int			lexan();
+    void		expr(int);
+    void		term(int);
+    void		factor(int);
+    int			match(int);
+    void		perform_push();
+    void		perform_and(int);
+    void		perform_or();
 
-	List			*tokens;
-	List			*result;
-	WeightWord		*current;
-	int				lookahead;
-	int				valid;
-	Stack			stack;
-	Database		*dbf;
-	String			error;
+    List		*tokens;
+    List		*result;
+    WeightWord		*current;
+    int			lookahead;
+    int			valid;
+    Stack		stack;
+    Database		*dbf;
+    String		error;
 };
 
 
